# bad-browser

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deno.jsonc
locales/: TODO.yml  en.yml  ja.yml  ko.yml
src/: app.rs  i18n.rs  main.rs  text.rs  types.rs  ui.rs  utils.rs  video.rs  web.rs
videos/: bad-apple.demo
