[package]
name = "bad-browser"
version = "0.6.1"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["blocking", "cookies", "gzip", "brotli", "json"] }
html2text = "0.16"
anyhow = "1.0"
regex = "1"
unicode-width = "0.2.2"
unicode-segmentation = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.9"
percent-encoding = "2.3"
chrono = "0.4"
rust-i18n = "2"
